--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="property_animation">Property Animation</string>
+    <string name="in_progress_check_back_shortly">In Progress, Check Back Shortly</string>
 </resources>
