Feature: Add Spin and Fade animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="simple_animation">Simple Animation</string>
     <string name="animation_set">Animation Set</string>
     <string name="flip_and_switch">Flip and Switch</string>
+    <string name="spin_and_fade">Spin and Fade</string>
 </resources>
