--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="spin_and_fade">Spin and Fade</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="interpolation">"Interpolation"</string>
+    <string name="drawable_animation">Drawable Animation</string>
 </resources>
